// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse > \\f\\relax{x} = \\int_{-\\infty}^\\infty\\f\\hat\\xi\\,e^{2 \\pi i \\xi x}\\,d\\xi 1`] = `
[
  [
    MathRun {
      "root": [
        MathText {
          "root": [
            "f",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "relax",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "x",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "=",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathSuperScript {
      "root": [
        BuilderElement {
          "root": [],
          "rootKey": "m:sSupPr",
        },
        BuilderElement {
          "root": [
            MathSubScript {
              "root": [
                BuilderElement {
                  "root": [],
                  "rootKey": "m:sSubPr",
                },
                BuilderElement {
                  "root": [
                    MathRun {
                      "root": [
                        MathText {
                          "root": [
                            "∫",
                          ],
                          "rootKey": "m:t",
                        },
                      ],
                      "rootKey": "m:r",
                    },
                  ],
                  "rootKey": "m:e",
                },
                BuilderElement {
                  "root": [
                    MathRun {
                      "root": [
                        MathText {
                          "root": [
                            "-",
                          ],
                          "rootKey": "m:t",
                        },
                      ],
                      "rootKey": "m:r",
                    },
                    MathRun {
                      "root": [
                        MathText {
                          "root": [
                            "∞",
                          ],
                          "rootKey": "m:t",
                        },
                      ],
                      "rootKey": "m:r",
                    },
                  ],
                  "rootKey": "m:sub",
                },
              ],
              "rootKey": "m:sSub",
            },
          ],
          "rootKey": "m:e",
        },
        BuilderElement {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "∞",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:sup",
        },
      ],
      "rootKey": "m:sSup",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "f",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "hat",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ξ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            ",",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathSuperScript {
      "root": [
        BuilderElement {
          "root": [],
          "rootKey": "m:sSupPr",
        },
        BuilderElement {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "e",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:e",
        },
        BuilderElement {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "2",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "π",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "i",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "ξ",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "x",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:sup",
        },
      ],
      "rootKey": "m:sSup",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            ",",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "d",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ξ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
  ],
]
`;

exports[`parse > \\frac{a+b}{c+d} 1`] = `
[
  [
    MathFraction {
      "root": [
        MathNumerator {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "a",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "+",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "b",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:num",
        },
        MathDenominator {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "c",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "+",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "d",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:den",
        },
      ],
      "rootKey": "m:f",
    },
  ],
]
`;

exports[`parse > \\sqrt[30]{a+\\sqrt{b+c}} 1`] = `
[
  [
    MathRadical {
      "root": [
        MathRadicalProperties {
          "root": [],
          "rootKey": "m:radPr",
        },
        MathDegree {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "3",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "0",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:deg",
        },
        BuilderElement {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "a",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "+",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "sqrt",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:e",
        },
      ],
      "rootKey": "m:rad",
    },
  ],
]
`;

exports[`parse > \\sum_{k=1}^{n} k=rac{n(n+1)}{2} 1`] = `
[
  [
    MathSuperScript {
      "root": [
        BuilderElement {
          "root": [],
          "rootKey": "m:sSupPr",
        },
        BuilderElement {
          "root": [
            MathSubScript {
              "root": [
                BuilderElement {
                  "root": [],
                  "rootKey": "m:sSubPr",
                },
                BuilderElement {
                  "root": [
                    MathSum {
                      "root": [
                        BuilderElement {
                          "root": [
                            BuilderElement {
                              "root": [
                                NextAttributeComponent {
                                  "root": {
                                    "accent": {
                                      "key": "m:val",
                                      "value": "∑",
                                    },
                                  },
                                  "rootKey": "_attr",
                                },
                              ],
                              "rootKey": "m:chr",
                            },
                            BuilderElement {
                              "root": [
                                NextAttributeComponent {
                                  "root": {
                                    "value": {
                                      "key": "m:val",
                                      "value": "undOvr",
                                    },
                                  },
                                  "rootKey": "_attr",
                                },
                              ],
                              "rootKey": "m:limLoc",
                            },
                            BuilderElement {
                              "root": [
                                NextAttributeComponent {
                                  "root": {
                                    "hide": {
                                      "key": "m:val",
                                      "value": 1,
                                    },
                                  },
                                  "rootKey": "_attr",
                                },
                              ],
                              "rootKey": "m:supHide",
                            },
                            BuilderElement {
                              "root": [
                                NextAttributeComponent {
                                  "root": {
                                    "hide": {
                                      "key": "m:val",
                                      "value": 1,
                                    },
                                  },
                                  "rootKey": "_attr",
                                },
                              ],
                              "rootKey": "m:subHide",
                            },
                          ],
                          "rootKey": "m:naryPr",
                        },
                        BuilderElement {
                          "root": [],
                          "rootKey": "m:e",
                        },
                      ],
                      "rootKey": "m:nary",
                    },
                  ],
                  "rootKey": "m:e",
                },
                BuilderElement {
                  "root": [
                    MathRun {
                      "root": [
                        MathText {
                          "root": [
                            "k",
                          ],
                          "rootKey": "m:t",
                        },
                      ],
                      "rootKey": "m:r",
                    },
                    MathRun {
                      "root": [
                        MathText {
                          "root": [
                            "=",
                          ],
                          "rootKey": "m:t",
                        },
                      ],
                      "rootKey": "m:r",
                    },
                    MathRun {
                      "root": [
                        MathText {
                          "root": [
                            "1",
                          ],
                          "rootKey": "m:t",
                        },
                      ],
                      "rootKey": "m:r",
                    },
                  ],
                  "rootKey": "m:sub",
                },
              ],
              "rootKey": "m:sSub",
            },
          ],
          "rootKey": "m:e",
        },
        BuilderElement {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "n",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:sup",
        },
      ],
      "rootKey": "m:sSup",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "k",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "=",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "r",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "a",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "c",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "n",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "(",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "n",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "+",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "1",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            ")",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "2",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
  ],
]
`;

exports[`parse > L = \\frac{1}{2} \\rho v^2 S C_L 1`] = `
[
  [
    MathRun {
      "root": [
        MathText {
          "root": [
            "L",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "=",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathFraction {
      "root": [
        MathNumerator {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "1",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:num",
        },
        MathDenominator {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "2",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:den",
        },
      ],
      "rootKey": "m:f",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ρ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathSuperScript {
      "root": [
        BuilderElement {
          "root": [],
          "rootKey": "m:sSupPr",
        },
        BuilderElement {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "v",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:e",
        },
        BuilderElement {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "2",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:sup",
        },
      ],
      "rootKey": "m:sSup",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "S",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathSubScript {
      "root": [
        BuilderElement {
          "root": [],
          "rootKey": "m:sSubPr",
        },
        BuilderElement {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "C",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:e",
        },
        BuilderElement {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "L",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:sub",
        },
      ],
      "rootKey": "m:sSub",
    },
  ],
]
`;

exports[`parse > command > greek1 1`] = `
[
  [
    MathRun {
      "root": [
        MathText {
          "root": [
            "α",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "β",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "γ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "δ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ϵ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ζ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "η",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "θ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ι",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "κ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "λ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "μ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ν",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ξ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "o",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "π",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ρ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "σ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "τ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "υ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ϕ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "χ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ψ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ω",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
  ],
]
`;

exports[`parse > command > greek2 1`] = `
[
  [
    MathRun {
      "root": [
        MathText {
          "root": [
            "ε",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ϑ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ϱ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "ς",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "φ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
  ],
]
`;

exports[`parse > command > greek3 1`] = `
[
  [
    MathRun {
      "root": [
        MathText {
          "root": [
            "Γ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Δ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Θ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Λ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Ξ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Π",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Σ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Υ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Φ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Ψ",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "Ω",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
  ],
]
`;

exports[`parse > i hbar \\frac{partial psi}{partial t} = H psi(x,t) 1`] = `
[
  [
    MathRun {
      "root": [
        MathText {
          "root": [
            "i",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "h",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "b",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "a",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "r",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathFraction {
      "root": [
        MathNumerator {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "p",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "a",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "r",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "t",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "i",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "a",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "l",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "p",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "s",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "i",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:num",
        },
        MathDenominator {
          "root": [
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "p",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "a",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "r",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "t",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "i",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "a",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "l",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
            MathRun {
              "root": [
                MathText {
                  "root": [
                    "t",
                  ],
                  "rootKey": "m:t",
                },
              ],
              "rootKey": "m:r",
            },
          ],
          "rootKey": "m:den",
        },
      ],
      "rootKey": "m:f",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "=",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "H",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "p",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "s",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "i",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "(",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "x",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            ",",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            "t",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
    MathRun {
      "root": [
        MathText {
          "root": [
            ")",
          ],
          "rootKey": "m:t",
        },
      ],
      "rootKey": "m:r",
    },
  ],
]
`;
